--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,8 +1,8 @@
 - interest:
-  item: Climbing
+  item: Cricket
   link:
 - interest:
-  item: Snowboarding
+  item: Programming
   link:
 - interest:
   item: Cooking
