--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
-title: My Resume
-url: 'http://webjeda.com'
+title: Suyash Soni
+url: 'http://suyash248.github.io'
 baseurl: '/suyash248.github.io' #change it according to your repository name
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
@@ -11,21 +11,21 @@ baseurl: '/suyash248.github.io' #change it according to your repository name
 #style: styles-6
 
 #Profile information
-name: Alan Doe
-tagline: Full Stack Developer
+name: Suyash Soni
+tagline: Backend Developer
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
-summary: 'Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean
-commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.'
+summary: '► ~3.5 years of experience while working in product-based startups. Currently working as ‘Software Developer’ on a SaaS product, involved in designing scalable system using microservice-based(SOA) architecture. 
+
+► Open to explore new technologies/paradigm(Functional programming/Reactive programming/Big data/Machine learning etc.).
+'
 
 #sidebar links
-email: hello@webjeda.com
-phone: 012 345 6789
+email: suyash.soni248@gmail.com
+phone: +91-9871897749
 website: blog.webjeda.com #do not add http://
-linkedin: alandoe
-github: sharu725
-twitter: '@webjeda'
+linkedin: https://www.linkedin.com/in/suyash248
+github: https://www.github.com/suyash248
+#twitter: '@webjeda'
 #Update all the sections by editing the files inside _data folder.
 
 # Tracker
