--- a/_config.yml
+++ b/_config.yml
@@ -14,17 +14,18 @@ baseurl: '/suyash248.github.io' #change it according to your repository name
 name: Suyash Soni
 tagline: Backend Developer
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
-summary: '► ~3.5 years of experience while working in product-based startups. Currently working as ‘Software Developer’ on a SaaS product, involved in designing scalable system using microservice-based(SOA) architecture. 
+summary: '
+► ~3.5 years of experience while working in product-based startups. Currently working as ‘Software Developer’ on a SaaS product, involved in designing scalable system using microservice-based(SOA) architecture. 
 
-► Open to explore new technologies/paradigm(Functional programming/Reactive programming/Big data/Machine learning etc.).
-'
+► Open to explore new technologies/paradigm(Functional programming/Reactive programming/Big data/Machine learning etc.).'
+
 
 #sidebar links
 email: suyash.soni248@gmail.com
 phone: +91-9871897749
-website: blog.webjeda.com #do not add http://
-linkedin: https://www.linkedin.com/in/suyash248
-github: https://www.github.com/suyash248
+#website: blog.webjeda.com #do not add http://
+linkedin: suyash248
+github: suyash248
 #twitter: '@webjeda'
 #Update all the sections by editing the files inside _data folder.
 
