--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -11,7 +11,11 @@
   # laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
   # architecto beatae vitae dicta sunt explicabo."
 - experience:
-  role: Software Engineer
+  role: Sr. Software Developer
+  time: July 2017 - Present
+  company: ZoPush, New Delhi
+- experience:
+  role: Software Developer
   time: June 2014 - September 2015
   company: DevelopmentLogics Solutions Pvt. Ltd., Dharamshala (H.P.)
   # details: "Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing
