--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -33,11 +33,11 @@
 - skill:
   name: Apache Spark
   level: 70%
-  theme: carrot
+  theme: asbestos
 - skill:
   name: Cassandra
   level: 90%
-  theme: pomengrate
+  theme: sunflower
 - skill:
   name: Redis
   level: 95%
@@ -77,7 +77,7 @@
 - skill:
   name: Struts 2
   level: 70%
-  theme: asbestos
+  theme: carrot
 - skill:
   name: AWS
   level: 70%
