--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ tagline: Backend Developer
 subtagline: (Python|Java|Scala)
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 summary: '
-<p>► ~3.5 years of experience while working in product-based startups. Currently working as ‘Software Developer’ on a SaaS product, involved in designing scalable system using microservice-based(SOA) architecture. </p>
-
-<p>► Open to explore new technologies/paradigm(Functional programming/Reactive programming/Big data/Machine learning etc.).</p>'
-
+<p>► ~4 years of experience while working in product-based startups.</p>
+<p>► Exposure to  design scalable systems using microservice-based architecture(SOA).</p>
+<p>► Open & keen to explore new technologies(Functional programming/Reactive programming/Big data/Machine learning etc.)</p>
+'
 
 #sidebar links
 email: suyash.soni248@gmail.com
